<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_map_settings"
            android:icon="@android:drawable/ic_menu_preferences"
            android:title="@string/menu_map_settings" />
        <item
            android:id="@+id/nav_matrix_credentials"
            android:icon="@android:drawable/ic_lock_lock"
            android:title="@string/menu_matrix_credentials" />
        <item
            android:id="@+id/nav_groups_rooms"
            android:icon="@android:drawable/ic_menu_share"
            android:title="@string/menu_groups_rooms" />
        <item
            android:id="@+id/nav_help"
            android:icon="@android:drawable/ic_menu_help"
            android:title="@string/menu_help" />
        <item
            android:id="@+id/nav_about"
            android:icon="@android:drawable/ic_menu_info_details"
            android:title="@string/menu_about" />
    </group>
</menu>
